minor devs, needs work

--- a/AN-21-XXX/AN-21-XXX.tex
+++ b/AN-21-XXX/AN-21-XXX.tex
@@ -15,12 +15,14 @@
 % multiple affiliations, create an address entry for the combination
 % To mark authors as primary, use the \author* form
 
-\author[icl]{Robert Bainbridge}
-\author[icl]{Jay Odedra}
+\author[another]{A. N. Other}
+%\author[icl]{Robert Bainbridge}
+%\author[icl]{Jay Odedra}
 %\author[zurich]{Yuta Takahashi}
 %\author[brown]{Xuli (Sebastian) Yan}
 
-\address[icl]{Imperial College London}
+\address[another]{Another Institute}
+%\address[icl]{Imperial College London}
 %\address[zurich]{University of Z\"urich}
 
 \date{\today}
@@ -55,6 +57,23 @@ pdfkeywords={CMS}} % limit six total
 \tableofcontents 
 
 \input{sections/intro}
+\input{sections/menu}
+
+\clearpage
+\section{Data samples and simulation}
+\clearpage
+\section{Commissioning}
+\subsection{Trigger rates at L1 and HLT}
+\subsection{CPU timing studies at HLT}
+\clearpage
+\section{Performance}
+\subsection{Trigger efficiency turn-on}
+\subsection{Trigger purity}
+\subsection{Signal \texorpdfstring{\axe}{AxE} at low \texorpdfstring{\qsq}{q2}}
+\clearpage
+\section{Emulated logic and performance}
+\clearpage
+\section{Summary}
 
 \newpage
 \begin{acknowledgments}
