--- a/AN-21-XXX/mycommands.tex
+++ b/AN-21-XXX/mycommands.tex
@@ -6,6 +6,8 @@
 \newcommand{\bhee}{\ensuremath{B{\to}Hee}\xspace}
 \newcommand{\bkll}{\ensuremath{B^{\pm}{\to}K^{\pm}\ell\ell}\xspace}
 \newcommand{\bkee}{\ensuremath{B^{\pm}{\to}K^{\pm}ee}\xspace}
+\newcommand{\bkjpsiee}{\ensuremath{B^{\pm}{\to}J/{\psi}(ee)K^{\pm}}\xspace}
+\newcommand{\bjpsieex}{\ensuremath{b{\to}J/{\psi}(ee)X}\xspace}
 \newcommand{\bkstll}{\ensuremath{B^{0}{\to}K^{*}\ell\ell}\xspace}
 \newcommand{\bkstee}{\ensuremath{B^{0}{\to}K^{*}ee}\xspace}
 \newcommand{\bkstmm}{\ensuremath{B^{0}{\to}K^{*}\mu\mu}\xspace}
